  cause mismatched physical locks to cause test errors rather than just
  reporting to the screen. (Robert Collins)

* Fallback ``CredentialStore`` instances registered with ``fallback=True``
  are now be able to provide credentials if obtaining credentials 
  via ~/.bazaar/authentication.conf fails. (Jelmer Vernooij, 
  Vincent Ladeuil, #321918)

* New smart server verb ``BzrDir.initialize_ex`` which implements a
  refactoring to the core of clone allowing less round trips on new
  branches. (Robert Collins)

* Updated the bundled ``ConfigObj`` library to 4.6.0 (Matt Nordhoff)


bzr 1.14
###########
:Codename: brisbane-core
:1.14rc1: 2009-04-06
:1.14rc2: 2009-04-19
:1.14: 2009-04-28
:1.14.1: 2009-05-01

New formats 1.14 and 1.14-rich-root supporting End-Of-Line (EOL) conversions,
keyword templating (via the bzr-keywords plugin) and generic content filtering.
End-of-line conversion is now supported for formats supporting content
filtering.

Changes from 1.14final to 1.14.1
********************************

* Change api_minimum_version back to api_minimum_version = (1, 13, 0)

Changes from 1.14rc2 to 1.14final
*********************************

* Fix a bug in the pure-python ``GroupCompress`` code when handling copies
  longer than 64KiB. (John Arbash Meinel, #364900)

Changes from 1.14rc1 to 1.14rc2
*******************************

* Fix for bug 358037 Revision not in
  bzrlib.groupcompress.GroupCompressVersionedFiles (Brian de Alwis, 
  John A Meinel)

* Fix for bug 354036 ErrorFromSmartServer - AbsentContentFactory object has no
  attribute 'get_bytes_as' exception while pulling from Launchpad 
  (Jean-Francois Roy, Andrew Bennetts, Robert Collins)

* Fix for bug 355280 eol content filters are never loaded and thus never
  applied (Brian de Alwis, Ian Clatworthy)
 
* bzr.dev -r4280  Change _fetch_uses_deltas = False for CHK repos until we can
  write a better fix. (John Arbash Meinel, Robert Collins)
