@@ -55,6 +55,9 @@ class LockHooks(Hooks):
         self.create_hook(HookPoint('lock_released',
             "Called with a bzrlib.lock.LockResult when a physical lock is "
             "released.", (1, 8), None))
+        self.create_hook(HookPoint('lock_broken',
+            "Called with a bzrlib.lock.LockResult when a physical lock is "
+            "broken.", (1, 15), None))
 
 
 class Lock(object):
